Add ESLint configuration, enhance SEO metadata, and refactor confession submission logic.

--- a/.env.local
+++ b/.env.local
@@ -2,9 +2,10 @@
 # Copy this file to .env.local and fill in your Firebase credentials
 
 # Firebase Configuration
-NEXT_PUBLIC_FIREBASE_API_KEY=your-api-key
-NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=your-project.firebaseapp.com
-NEXT_PUBLIC_FIREBASE_PROJECT_ID=your-project-id
-NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=your-project.appspot.com
-NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=your-sender-id
-NEXT_PUBLIC_FIREBASE_APP_ID=your-app-id
+NEXT_PUBLIC_FIREBASE_API_KEY="AIzaSyAip---naspvBAK5ZoNlppnx-8DbGN9c8A"
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=https://spilltea-c4516.firebaseapp.com
+NEXT_PUBLIC_FIREBASE_PROJECT_ID="spilltea-c4516"
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=https://spilltea-c4516.firebasestorage.app
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID="838659676030"
+NEXT_PUBLIC_FIREBASE_APP_ID="1:838659676030:web:1028eca3fa62478092052f"
+
